# docs/swagger.json
@@ -72,10 +72,10 @@
                 }
             }
         },
-        "/deals": {
+        "/tasks": {
             "get": {
                 "tags": [
-                    "deal"
+                    "task"
                 ],
                 "summary": "get all",
                 "responses": {
@@ -83,8 +83,8 @@
                         "description": "OK",
                         "schema": {
                             "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/deal.Deal"
+                            "projects": {
+                                "$ref": "#/definitions/task.Task"
                             }
                         }
                     },
@@ -98,23 +98,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "deal"
+                    "task"
                 ],
-                "summary": "create deal",
+                "summary": "create task",
                 "parameters": [
                     {
-                        "description": "create deal",
-                        "name": "deal",
+                        "description": "create task",
+                        "name": "task",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/deal.DealDto"
+                            "$ref": "#/definitions/task.TaskDto"
                         }
                     }
                 ],
                 "responses": {
                     "201": {
-                        "description": "Deal created"
+                        "description": "Task created"
                     },
                     "400": {
                         "description": "Bad request"
@@ -129,23 +129,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "deal"
+                    "task"
                 ],
-                "summary": "update deal",
+                "summary": "update task",
                 "parameters": [
                     {
-                        "description": "Updating deal",
-                        "name": "deal",
+                        "description": "Updating task",
+                        "name": "task",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/deal.Deal"
+                            "$ref": "#/definitions/task.Task"
                         }
                     }
                 ],
                 "responses": {
                     "204": {
-                        "description": "Deal updated"
+                        "description": "Task updated"
                     },
                     "500": {
                         "description": "Internal server error"
@@ -153,18 +153,18 @@
                 }
             }
         },
-        "/deals/{id}": {
+        "/tasks/{id}": {
             "get": {
                 "consumes": [
                     "application/json"
                 ],
                 "tags": [
-                    "deal"
+                    "task"
                 ],
                 "summary": "get by id",
                 "parameters": [
                     {
-                        "description": "Deal id",
+                        "description": "Task id",
                         "name": "id",
                         "in": "body",
                         "required": true,
@@ -177,14 +177,14 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/deal.Deal"
+                            "$ref": "#/definitions/task.Task"
                         }
                     },
                     "400": {
                         "description": "Bad request"
                     },
                     "404": {
-                        "description": "Deal not found"
+                        "description": "Task not found"
                     }
                 }
             },
@@ -193,12 +193,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "deal"
+                    "task"
                 ],
                 "summary": "delete by id",
                 "parameters": [
                     {
-                        "description": "Deal id",
+                        "description": "Task id",
                         "name": "id",
                         "in": "body",
                         "required": true,
@@ -209,7 +209,7 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "Deal deleted"
+                        "description": "Task deleted"
                     },
                     "500": {
                         "description": "Internal server error"
@@ -217,10 +217,10 @@
                 }
             }
         },
-        "/items": {
+        "/projects": {
             "get": {
                 "tags": [
-                    "item"
+                    "project"
                 ],
                 "summary": "get all",
                 "responses": {
@@ -228,8 +228,8 @@
                         "description": "OK",
                         "schema": {
                             "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/auth.Item"
+                            "projects": {
+                                "$ref": "#/definitions/auth.Project"
                             }
                         }
                     },
@@ -243,23 +243,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "item"
+                    "project"
                 ],
-                "summary": "create item",
+                "summary": "create project",
                 "parameters": [
                     {
                         "description": "create request",
-                        "name": "item",
+                        "name": "project",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth.ItemDto"
+                            "$ref": "#/definitions/auth.ProjectDto"
                         }
                     }
                 ],
                 "responses": {
                     "201": {
-                        "description": "Item created"
+                        "description": "Project created"
                     },
                     "400": {
                         "description": "Bad request"
@@ -274,23 +274,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "item"
+                    "project"
                 ],
-                "summary": "update item",
+                "summary": "update project",
                 "parameters": [
                     {
                         "description": "Updating user",
-                        "name": "item",
+                        "name": "project",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth.Item"
+                            "$ref": "#/definitions/auth.Project"
                         }
                     }
                 ],
                 "responses": {
                     "204": {
-                        "description": "Item updated"
+                        "description": "Project updated"
                     },
                     "500": {
                         "description": "Internal server error"
@@ -298,18 +298,18 @@
                 }
             }
         },
-        "/items/{id}": {
+        "/projects/{id}": {
             "get": {
                 "consumes": [
                     "application/json"
                 ],
                 "tags": [
-                    "item"
+                    "project"
                 ],
                 "summary": "get by id",
                 "parameters": [
                     {
-                        "description": "Item id",
+                        "description": "Project id",
                         "name": "id",
                         "in": "body",
                         "required": true,
@@ -322,14 +322,14 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/auth.Item"
+                            "$ref": "#/definitions/auth.Project"
                         }
                     },
                     "400": {
                         "description": "Bad request"
                     },
                     "404": {
-                        "description": "Item not found"
+                        "description": "Project not found"
                     }
                 }
             },
@@ -338,12 +338,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "item"
+                    "project"
                 ],
                 "summary": "delete by id",
                 "parameters": [
                     {
-                        "description": "Item id",
+                        "description": "Project id",
                         "name": "id",
                         "in": "body",
                         "required": true,
@@ -354,7 +354,7 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "Item deleted"
+                        "description": "Project deleted"
                     },
                     "500": {
                         "description": "Internal server error"
@@ -373,7 +373,7 @@
                         "description": "OK",
                         "schema": {
                             "type": "array",
-                            "items": {
+                            "projects": {
                                 "$ref": "#/definitions/auth.User"
                             }
                         }
@@ -560,7 +560,7 @@
                 }
             }
         },
-        "auth.Item": {
+        "auth.Project": {
             "type": "object",
             "required": [
                 "cost",
@@ -587,7 +587,7 @@
                 }
             }
         },
-        "auth.ItemDto": {
+        "auth.ProjectDto": {
             "type": "object",
             "required": [
                 "cost",
@@ -627,14 +627,14 @@
                 }
             }
         },
-        "deal.Deal": {
+        "task.Task": {
             "type": "object",
             "required": [
                 "amount",
                 "client_name",
                 "description",
                 "id",
-                "item_id",
+                "project_id",
                 "user_id"
             ],
             "properties": {
@@ -650,7 +650,7 @@
                 "id": {
                     "type": "integer"
                 },
-                "item_id": {
+                "project_id": {
                     "type": "integer"
                 },
                 "user_id": {
@@ -658,13 +658,13 @@
                 }
             }
         },
-        "deal.DealDto": {
+        "task.TaskDto": {
             "type": "object",
             "required": [
                 "amount",
                 "client_name",
                 "description",
-                "item_id",
+                "project_id",
                 "user_id"
             ],
             "properties": {
@@ -677,7 +677,7 @@
                 "description": {
                     "type": "string"
                 },
-                "item_id": {
+                "project_id": {
                     "type": "integer"
                 },
                 "user_id": {
