# internal/app/app.go
@@ -4,13 +4,9 @@ import (
 	"fmt"
 
 	"github.com/labstack/echo/v4"
-	project "github.com/lgu-elo/crm-api-gateway/internal/project"
+	"github.com/lgu-elo/gateway/internal/config"
 	"github.com/lgu-elo/gateway/internal/server"
-	task "github.com/lgu-elo/gateway/internal/task"
-	user "github.com/lgu-elo/gateway/internal/user"
 	"github.com/lgu-elo/gateway/pkg/logger"
-	auth "github.com/lsu-group/crm-api-gateway/internal/auth"
-	"github.com/lsu-group/crm-api-gateway/internal/config"
 	"github.com/sirupsen/logrus"
 	echoSwagger "github.com/swaggo/echo-swagger"
 	fxlogrus "github.com/takt-corp/fx-logrus"
@@ -33,28 +29,28 @@ func CreateApp() fx.Option {
 
 			server.New,
 
-			fx.Annotate(user.NewClient, fx.As(new(user.Client))),
-			fx.Annotate(user.NewService, fx.As(new(user.IService))),
+			//fx.Annotate(user.NewClient, fx.As(new(user.Client))),
+			//fx.Annotate(user.NewService, fx.As(new(user.IService))),
 
-			fx.Annotate(auth.NewClient, fx.As(new(auth.Client))),
-			fx.Annotate(auth.NewService, fx.As(new(auth.IService))),
+			//fx.Annotate(auth.NewClient, fx.As(new(auth.Client))),
+			//fx.Annotate(auth.NewService, fx.As(new(auth.IService))),
 
-			fx.Annotate(project.NewClient, fx.As(new(project.Client))),
-			fx.Annotate(project.NewService, fx.As(new(project.IService))),
+			//fx.Annotate(project.NewClient, fx.As(new(project.Client))),
+			//fx.Annotate(project.NewService, fx.As(new(project.IService))),
 
-			fx.Annotate(task.NewClient, fx.As(new(task.Client))),
-			fx.Annotate(task.NewService, fx.As(new(task.IService))),
+			//fx.Annotate(task.NewClient, fx.As(new(task.Client))),
+			//fx.Annotate(task.NewService, fx.As(new(task.IService))),
 
-			auth.NewHandler,
-			user.NewHandler,
-			project.NewHandler,
-			task.NewHandler,
+			//auth.NewHandler,
+			//user.NewHandler,
+			//project.NewHandler,
+			//task.NewHandler,
 		),
 		fx.Invoke(serve),
 	)
 }
 
-func serve(e *echo.Echo, cfg *config.Cfg, ah *auth.Handler, uh *user.Handler, ih *project.Handler, dh *task.Handler) {
+func serve(e *echo.Echo, cfg *config.Cfg /*, ah *auth.Handler, uh *user.Handler, ih *project.Handler, dh *task.Handler */) {
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 
 	e.Logger.Fatal(e.Start(fmt.Sprintf(
